v0.2.2
- Added simple View system; moved HTML views out of PhpSecInfo class.  You can
  use PhpSecInfo->setViewDirectory($path) to set the path to your own custom
  views (your view files need to mirror the structure of the default views).
- Added stubs for cli, CSV and RSS views
- PHPSecInfo_Test::getUnixId() now handles failure better and tries alternate
  methods before giving up
- Minor CSS fixes in HTML view <Thomas Corbiere>

v0.2.1
- uid and gid tests now correctly test the user and group that PHP is executing as
  (requires that exec() or posix functions are enabled)
- Changed upload_max_filesize and post_max_size return "OK" if current value is
  equal to recommended value
- fixed nonstandard naming with a couple locally used constants
- fixed problem with XHTML validity in cases of not run tests <Thomas Corbiere>

v0.2.0
- Changes to output code to avoid licensing problems with PHP (CSS was derived code)
- New test: PhpSecInfo_Test_Session_Save_Path <Thomas Corbiere>
- API changes!  Read the API docs if you're a test developer, and ask questions on the
  mailing list.
- rewrote all tests to adapt to API changes (displaying and use current and recommended
  settings in tests)
- Added display of "current" and "recommended" settings in test result output
- Added link to "more info" in output (see Test::getMoreInfoURL)
- Modified CSS to improve readability
- added Test::getMoreInfoURL() to generate link to detailed info on external site
- added PHPSECINFO_TEST_MOREINFO_BASEURL and set to
  http://phpsec.org/projects/phpsecinfo/tests/
- Changed Test_Curl::isTestable() to use extension_loaded.  (Thx Thomas Corbiere)
- Changed Test_CGI::isTestable() to use strpos() instead of preg_match() (Thx Thomas Corbiere)
- Added isTestable() checks for magic_quotes_gpc and register_globals where
  tests are not executed if PHP_VERSION >= 6 (Thx Thomas Corbiere)
- Fixed bug in use_trans_sid.php where parent::_setMessages() wasn't being called.
  (Thx Thomas Corbiere)