@@ -11,7 +11,7 @@
 /**
  * require the PhpSecInfo_Test_Core class
  */
-require_once('PhpSecInfo/Test/Test_Core.php');
+require_once(PHPSECINFO_BASE_DIR.'/Test/Test_Core.php');
 
 /**
  * Test Class for magic_quotes_gpc
