@@ -9,7 +9,7 @@
 /**
  * require the PhpSecInfo_Test_Core class
  */
-require_once('PhpSecInfo/Test/Test_Session.php');
+require_once(PHPSECINFO_BASE_DIR.'/Test/Test_Session.php');
 
 /**
  * Test class for session save_path
