@@ -1,0 +1,2 @@
+<?php
+// not used for JSON
